# toon-dash

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  TV_DEVELOPMENT_GUIDE.md  TV_INPUT_GUIDE.md  TV_TESTING_GUIDE.md  build.sh  vercel.json
src/: lib.rs  main.rs  tv_input_manager.rs
src/game/: coins.rs  collectibles.rs  loading.rs  mod.rs  obstacles.rs  persistence.rs  player.rs  state.rs  track.rs  types.rs
src/input/: mod.rs  tv_input.rs
src/models/: gltf_mesh.rs  loader.rs  mod.rs
src/platform/: mod.rs  tizen.rs
src/rendering/: camera.rs  mod.rs  renderer.rs
web/: bootstrap.js  index.html  pal.js  tv-pal.js
web/pal/: namespace.js
